feat: add support for 1.18.x